force-app/main/default/objects/EmailMessage.object
<CustomObject>
</CustomObject>