force-app/main/default/objects/EmailMessage/fields/Masked_Data__c.field-meta.xml
<CustomField>
    <fullName>Masked_Data__c</fullName>
    <businessOwnerGroup>Data_Owner_IAM_Identity_Management</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>Stores a copy of the sensitive data detected in Email TextBody;Subject;HtmlBody by the GearsDataMask package.</description>
    <inlineHelpText>Stores a copy of the sensitive data detected in Email TextBody;Subject;HtmlBody by the GearsDataMask package.</inlineHelpText>
    <label>Masked Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>