force-app/main/default/objects/EmailMessage/fields/Masked_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Masked_Data_Date__c</fullName>
    <description>Shows the date when sensitive data was detected in Email TextBody;Subject;HtmlBody by the GearsDataMask package.</description>
    <inlineHelpText>Shows the date when sensitive data was detected in Email TextBody;Subject;HtmlBody by the GearsDataMask package.</inlineHelpText>
    <label>Masked Data Date</label>
    <type>Date</type>
</CustomField>