force-app/main/default/objects/EmailMessage/fields/Masked_Data_Exists__c.field-meta.xml
<CustomField>
    <fullName>Masked_Data_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If marked true, then sensitive data was detected in Email TextBody;Subject;HtmlBody by the GearsDataMask package.</description>
    <inlineHelpText>If marked true, then sensitive data was detected in Email TextBody;Subject;HtmlBody by the GearsDataMask package.</inlineHelpText>
    <label>Masked Data Exists</label>
    <type>Checkbox</type>
</CustomField>